--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,13 +1,13 @@
 .Button {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 10px 35px;
   border-radius: 4px;
-  border: 1px solid #ccc;
+  border: 1px solid transparent;
   color: #000;
   margin-right: 15px;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .Button:focus {
@@ -32,6 +32,6 @@
 }
 
 .primary {
-  background: #2884f6;
+  background: #fca82f;
   color: #fff;
 }
