--- a/src/components/Navigation/Drawer/Drawer.module.css
+++ b/src/components/Navigation/Drawer/Drawer.module.css
@@ -1,20 +1,21 @@
 .Drawer {
-  position: fixed;
+  /* position: fixed;
   left: 0;
   top: 0;
-  bottom: 0;
-  width: 80%;
-  max-width: 300px;
+  bottom: 0; */
+  width: 300px;
+  /* max-width: 300px; */
   padding: 20px 10px;
   box-sizing: border-box;
   background: #fff;
-  transform: translateX(0px);
+  /* transform: translateX(0px); */
   transition: transform 0.22s ease-in;
   z-index: 90;
 }
 
 .Drawer.close {
   transform: translateX(-300px);
+  width: 0;
 }
 
 .Drawer ul {
@@ -40,4 +41,9 @@
 .Drawer ul li a:hover,
 .active {
   opacity: 0.7;
+}
+
+#mainNav {
+  grid-area: nav;
+  grid-row-start: 1;
 }
