--- a/src/hoc/Layout/Layout.module.scss
+++ b/src/hoc/Layout/Layout.module.scss
@@ -1,7 +1,11 @@
 .Layout {
+  display: grid;
+  grid-template-areas:
+    'header header'
+    'nav main';
+  grid-template-rows: 80px 1fr;
+  grid-template-columns: 0 1fr;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
   background: #e5e5e5;
 
   main {
@@ -9,4 +13,23 @@
     flex-direction: column;
     flex-grow: 1;
   }
+}
+
+#pageHeader {
+  grid-area: header;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .fa,
+  .fas {
+    position: relative;
+    margin: 10px 20px;
+    transition: 0.22s ease-in;
+  }
+}
+
+#mainContent {
+  grid-area: main;
+  grid-row-start: 1;
 }
